--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
         </ul>
     </div>
     <section class="best_sellers">
-        <h2 class="best_sellers_titulo">BEST SELLERS</h2>
+        <div class="d-flex flex-row">
+            <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
+            <h2 class="best_sellers_titulo">BEST SELLERS</h2>
+        </div>
         <div class=" w-30 d-flex flex-column justify-content-center align-items-center">
             <div class=" owl-1 owl-carousel owl-theme  ">
                 <div class="item">
@@ -127,7 +130,10 @@
     </section>
     <section class="about_us">
         <div class="about_us_contenido_contenedor">
-            <h2 class="about_us_titulo">ABOUT US</h2>
+            <div class="d-flex flex-row">
+                <img src="PRUEBA/IMAGENES/Rectangle 5 (1).png" class="about_us_titulo_img" alt="about_us_titulo_img">
+                <h2 class="about_us_titulo">ABOUT US</h2>
+            </div>
             <div class="about_us_informacion">
                 <article >
                     <h6>W</h6> 
@@ -185,7 +191,10 @@
         </div>
     </section>
     <section class="shop_by_category my-5 ">
-        <h2 class="shop_by_category_titulo">SHOP BY CATEGORY</h2>
+        <div class="d-flex flex-row">
+            <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
+            <h2 class="shop_by_category_titulo">SHOP BY CATEGORY</h2>
+        </div>
         <div class="shop_by_category_container d-flex flex-row justify-content-center align-items-center ">
             <div class="shop_by_category_card d-flex flex-column justify-content-between align-items-center ">
                 <div class="shop_by_category_card_img mx-3">
@@ -216,7 +225,10 @@
     <div></div>
     <section class="testimonials my-5 py-5 d-flex flex-row">
         <div class="w-50 m-5 testimonials_informacion">
-            <h2 class="testimonials_titulo">Testimonials</h2>
+            <div class="d-flex flex-row">
+                <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
+                <h2 class="testimonials_titulo">Testimonials</h2>
+            </div>
             <p class="d-inline" >
                 <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
             </p>
