--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class=" owl-1 owl-carousel owl-theme  ">
                 <div class="item">
                     <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/PRODUCTO 1.jpg" class="card-img-top" alt="...">
+                        <img src="PRUEBA/IMAGENES/PRODUCTO 1.jpg" class="card-img-top mt-3" alt="...">
                         <h4>100$</h4>
                         <div class="best_sellers_card-body ">
                             Adidas shoes
@@ -106,7 +106,7 @@
                 </div>
                 <div class="item">
                     <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/PRODUCTO 2.jpg" class="card-img-top" alt="...">
+                        <img src="PRUEBA/IMAGENES/PRODUCTO 2.jpg" class="card-img-top mt-3" alt="...">
                         <h4>100$</h4>
                         <div class="best_sellers_card-body ">
                             Sport short
@@ -115,7 +115,7 @@
                 </div>
                 <div class="item">
                     <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/PRODUCTO 3.jpg" class="card-img-top" alt="...">
+                        <img src="PRUEBA/IMAGENES/PRODUCTO 3.jpg" class="card-img-top mt-3" alt="...">
                         <h4>100$</h4>
                         <div class="best_sellers_card-body ">
                             Running T-shirt
@@ -241,7 +241,7 @@
             <div class="owl-2 owl-carousel owl-theme">
                 <div class="item">
                     <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top" alt="...">
+                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
                         <h4>100$</h4>
                         <div class="best_sellers_card-body ">
                             Adidas shoes
@@ -250,7 +250,7 @@
                 </div>
                 <div class="item">
                     <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top" alt="...">
+                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
                         <h4>100$</h4>
                         <div class="best_sellers_card-body ">
                             Sport short
@@ -259,7 +259,7 @@
                 </div>
                 <div class="item">
                     <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top" alt="...">
+                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
                         <h4>100$</h4>
                         <div class="best_sellers_card-body ">
                             Running T-shirt
