--- a/about.html
+++ b/about.html
@@ -7,9 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap-4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="./owl/owl.theme.default.min.css">
 </head>
 <body>
     <header class="fixed-top header">
@@ -88,46 +87,6 @@
             </li>
         </ul>
     </div>
-    <section class="best_sellers">
-        <div class="d-flex flex-row">
-            <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
-            <h2 class="best_sellers_titulo">BEST SELLERS</h2>
-        </div>
-        <div class=" w-30 d-flex flex-column justify-content-center align-items-center">
-            <div class=" owl-1 owl-carousel owl-theme  ">
-                <div class="item">
-                    <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/PRODUCTO 1.jpg" class="card-img-top mt-3" alt="...">
-                        <h4>100$</h4>
-                        <div class="best_sellers_card-body ">
-                            Adidas shoes
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/PRODUCTO 2.jpg" class="card-img-top mt-3" alt="...">
-                        <h4>100$</h4>
-                        <div class="best_sellers_card-body ">
-                            Sport short
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/PRODUCTO 3.jpg" class="card-img-top mt-3" alt="...">
-                        <h4>100$</h4>
-                        <div class="best_sellers_card-body ">
-                            Running T-shirt
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="best_sellers_boton border-0">
-                View More
-            </button>
-        </div>
-    </section>
     <section class="about_us">
         <div class="about_us_contenido_contenedor">
             <div class="d-flex flex-row">
@@ -190,84 +149,6 @@
             </ul>
         </div>
     </section>
-    <section class="shop_by_category my-5 ">
-        <div class="d-flex flex-row">
-            <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
-            <h2 class="shop_by_category_titulo">SHOP BY CATEGORY</h2>
-        </div>
-        <div class="shop_by_category_container d-flex flex-row justify-content-center align-items-center ">
-            <div class="shop_by_category_card d-flex flex-column justify-content-between align-items-center ">
-                <div class="shop_by_category_card_img mx-3">
-                    <img src="PRUEBA/IMAGENES/CATEGORIA 1.jpg" class="card-img-top" alt="...">
-                </div>
-                <div class="shop_by_category_card_titulo mt-5">
-                    Shoes
-                </div>
-            </div>
-            <div class="shop_by_category_card d-flex flex-column justify-content-center align-items-center mx-3">
-                <div class="shop_by_category_card_img">
-                    <img src="PRUEBA/IMAGENES/CATEGORIA 2.jpg" class="card-img-top" alt="...">
-                </div>
-                <div class="shop_by_category_card_titulo mt-5">
-                    Sportswear
-                </div>
-            </div>
-            <div class="shop_by_category_card d-flex flex-column justify-content-center align-items-center mx-3">
-                <div class="shop_by_category_card_img">
-                    <img src="PRUEBA/IMAGENES/CATEGORIA 3.jpg" class="card-img-top" alt="...">
-                </div>
-                <div class="shop_by_category_card_titulo mt-5">
-                    T-shirt
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="testimonials my-5 py-5 d-flex flex-row">
-        <div class="w-50 m-5 testimonials_informacion">
-            <div class="d-flex flex-row">
-                <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
-                <h2 class="testimonials_titulo">Testimonials</h2>
-            </div>
-            <p class="d-inline" >
-                <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
-            </p>
-            <button class="border-0">View More</button>
-        </div>
-        <div class="testimonials_panel_color_uno">
-        </div class>
-        <div class="testimonials_panel_color_dos"></div>
-        <div class="w-50 d-flex justify-content-center align-items-center" >
-            <div class="owl-2 owl-carousel owl-theme">
-                <div class="item">
-                    <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
-                        <h4>100$</h4>
-                        <div class="best_sellers_card-body ">
-                            Adidas shoes
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
-                        <h4>100$</h4>
-                        <div class="best_sellers_card-body ">
-                            Sport short
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="card best_sellers_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
-                        <h4>100$</h4>
-                        <div class="best_sellers_card-body ">
-                            Running T-shirt
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="Subscribe_to_Newsletter d-flex flex-column justify-content-center align-items-center my-5">
         <h2>Subscribe to Newsletter</h2>
         <form class="d-flex flex-row flex-wrap justify-content-center align-content-center ">
@@ -328,10 +209,7 @@
             <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt=""">
         </div>
     </footer>
-    <script src="./owl/jquery.min.js"></script>
-    <script src="./owl/owl.carousel.min.js"></script>
     <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/nav.js"></script>
 </body>
 </html>
