--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                 </div>
                 </div>
             </nav>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="PRUEBA/IMAGENES/LOGO-COLOR.png" alt="" id="nav_logo">
             </a>
         </div>
@@ -177,10 +177,18 @@
             <div>
                 <h6>Quick Links</h6>
                 <ul>
-                    <li>About Us</li>
-                    <li>Shop By Category</li>
-                    <li>Services </li>
-                    <li>Contact Us</li>
+                    <li >
+                        <a aria-current="page" href="about.html">About us</a>
+                    </li>
+                    <li >
+                        <a  href="shop.html">Shop By</a>
+                    </li>
+                    <li class=>
+                        <a  href="preguntasF.html">Faq’s </a>
+                    </li>
+                    <li >
+                        <a  href="contact.html">Contact Us</a>
+                    </li>
                 </ul>
             </div>
             <div>
