--- a/contact.html
+++ b/contact.html
@@ -137,10 +137,18 @@
         <div>
             <h6>Quick Links</h6>
             <ul>
-                <li>About Us</li>
-                <li>Shop By Category</li>
-                <li>Services </li>
-                <li>Contact Us</li>
+                <li >
+                    <a aria-current="page" href="about.html">About us</a>
+                </li>
+                <li >
+                    <a  href="shop.html">Shop By</a>
+                </li>
+                <li class=>
+                    <a  href="preguntasF.html">Faq’s </a>
+                </li>
+                <li >
+                    <a  href="contact.html">Contact Us</a>
+                </li>
             </ul>
         </div>
         <div>
@@ -169,10 +177,7 @@
         <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt=""">
     </div>
 </footer>
-<script src="./owl/jquery.min.js"></script>
-<script src="./owl/owl.carousel.min.js"></script>
 <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
 <script src="js/nav.js"></script>
 </body>
 </html>
