--- a/preguntasF.html
+++ b/preguntasF.html
@@ -55,7 +55,7 @@
                 </div>
                 </div>
             </nav>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="PRUEBA/IMAGENES/LOGO-COLOR.png" alt="" id="nav_logo">
             </a>
         </div>
@@ -91,7 +91,7 @@
 <section class="preguntas_frecuentes">
     <div class="d-flex flex-row">
         <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="titulo_img">
-        <h2 class="contact_titulo">Faq’s</h2>
+        <h2 class="preguntas_frecuentes_titulo">Faq’s</h2>
     </div>
     <div class="accordion m-5 " id="accordionExample">
         <div class="card">
@@ -163,10 +163,18 @@
         <div>
             <h6>Quick Links</h6>
             <ul>
-                <li>About Us</li>
-                <li>Shop By Category</li>
-                <li>Services </li>
-                <li>Contact Us</li>
+                <li >
+                    <a aria-current="page" href="about.html">About us</a>
+                </li>
+                <li >
+                    <a  href="shop.html">Shop By</a>
+                </li>
+                <li class=>
+                    <a  href="preguntasF.html">Faq’s </a>
+                </li>
+                <li >
+                    <a  href="contact.html">Contact Us</a>
+                </li>
             </ul>
         </div>
         <div>
@@ -198,7 +206,6 @@
 <script src="./owl/jquery.min.js"></script>
 <script src="./owl/owl.carousel.min.js"></script>
 <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
 <script src="js/nav.js"></script>
 </body>
 </html>
