--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
                 </button>
                 <div class="collapse navbar-collapse"  id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="about.html">About us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop By</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="preguntasF.html">Faq’s </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="about.html">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Shop By</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="preguntasF.html">Faq’s </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
                     </ul>
                 </div>
                 </div>
             </nav>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="PRUEBA/IMAGENES/LOGO-COLOR.png" alt="" id="nav_logo">
             </a>
         </div>
@@ -235,10 +235,18 @@
             <div>
                 <h6>Quick Links</h6>
                 <ul>
-                    <li>About Us</li>
-                    <li>Shop By Category</li>
-                    <li>Services </li>
-                    <li>Contact Us</li>
+                    <li >
+                        <a aria-current="page" href="about.html">About us</a>
+                    </li>
+                    <li >
+                        <a  href="shop.html">Shop By</a>
+                    </li>
+                    <li class=>
+                        <a  href="preguntasF.html">Faq’s </a>
+                    </li>
+                    <li >
+                        <a  href="contact.html">Contact Us</a>
+                    </li>
                 </ul>
             </div>
             <div>
