--- a/index.html
+++ b/index.html
@@ -12,48 +12,58 @@
     <link rel="stylesheet" href="./owl/owl.theme.default.min.css">
 </head>
 <body>
-    <header class="fixed-top header">
-        <div class="d-flex flex-row-reverse bd-highlight mb-3">
-            <div class="header_top d-flex flex-row">
+    <header class="container-fluid w-100 fixed-top header">
+        <div class="d-flex flex-row-reverse bd-highlight flex-wrap">
+            <div class="header_top d-flex flex-row flex-grow-1 justify-content-center align-items-center">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
                     <li class="nav-item">
-                        <i class="bi bi-envelope-fill"></i>
+                        <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-envelope-fill"></i> 
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-geo-alt-fill"></i>
+                        <a href="https://www.google.com/maps" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-geo-alt-fill"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-telephone-fill"></i>
+                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-telephone-fill"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-zoom-out"></i>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-zoom-out"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <i class="bi bi-cart"></i>
+                        <a href="#" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-cart"></i>
+                        </a>
                     </li>
                 </ul> 
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-lightp">
-                <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse"  id="navbarNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="about.html">About us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Shop By</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="preguntasF.html">Faq’s </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
+            <nav class="navbar navbar-expand-sm navbar-light flex-grow-1">
+                <div class="container-fluid w-100 h-100 d-flex flex-row justify-content-center align-items-center">
+                    <button class="navbar-toggler flex-grow-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-flex flex-row  justify-content-center align-items-center"  id="navbarNav">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item my-2">
+                                <a class="nav-link active" aria-current="page" href="about.html">About us</a>
+                            </li>
+                            <li class="nav-item my-2">
+                                <a class="nav-link" href="shop.html">Shop By</a>
+                            </li>
+                            <li class="nav-item my-2">
+                                <a class="nav-link" href="preguntasF.html">Faq’s </a>
+                            </li>
+                            <li class="nav-item my-2">
+                                <a class="nav-link" href="contact.html">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
             <a class="navbar-brand" href="index.html">
