--- a/preguntasF.html
+++ b/preguntasF.html
@@ -104,7 +104,7 @@
       
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
-                Yes, all your data is sent fully encrypted. And the entire system is automated and secure.          </div>
+                yes. And the entire system is automated and secure.          </div>
         </div>
         <div class="card">
           <div class="card-header" id="headingTwo">
